# inns-nfts

./: Cargo.toml  Makefile.toml  README.md
.circleci/: config.yml
contracts/inns721-base/: Cargo.toml  NOTICE
contracts/inns721-base/schema/: cw721-base.json
contracts/inns721-base/src/: contract_tests.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/inns721-metadata-onchain/: Cargo.toml  NOTICE  README.md
contracts/inns721-metadata-onchain/examples/: metadata.json
contracts/inns721-metadata-onchain/schema/: cw721-metadata-onchain.json
contracts/inns721-metadata-onchain/src/: lib.rs
